--- a/Life_expectancy_and_GDP/life_expectancy_gdp.ipynb
+++ b/Life_expectancy_and_GDP/life_expectancy_gdp.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
     "sns.stripplot(data=data, x='Country', y='Expectancy', hue='Country', \n",
     "              size=3, alpha=0.5)\n",
     "plt.xticks(rotation=45)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -173,20 +173,6 @@
     "ax.spines['right'].set_visible(False)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
