--- a/Life_expectancy_and_GDP/life_expectancy_gdp.ipynb
+++ b/Life_expectancy_and_GDP/life_expectancy_gdp.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,11 +39,13 @@
    "source": [
     "data = pd.read_csv('all_data.csv')\n",
     "print(list(data.columns))\n",
-    "\n",
-    "data.rename(columns={'Life expectancy at birth (years)': 'Expectancy'}, inplace=True)\n",
-    "data['Country'] = data['Country'].replace('United States of America', 'USA')\n",
     "print(data.head())\n",
     "\n",
+    "# Rename columns and values for better visibility\n",
+    "data.rename(columns={'Life expectancy at birth (years)': 'Expectancy'}, inplace=True)\n",
+    "data['Country'] = data['Country'].replace('United States of America', 'USA')\n",
+    "\n",
+    "# Check datatypes\n",
     "print(data.dtypes)"
    ]
   },
@@ -65,12 +67,13 @@
     }
    ],
    "source": [
+    "# Check how many nans in each column\n",
     "print(data.isna().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +92,7 @@
     }
    ],
    "source": [
+    "# Print summary statistics for each country\n",
     "print(data.groupby('Country')['Expectancy'].describe())"
    ]
   },
@@ -140,6 +144,7 @@
     }
    ],
    "source": [
+    "# Plot expectancy (mean and individual points) for each country\n",
     "sns.catplot(data=data, x='Country', y='Expectancy', hue='Country',\n",
     "            kind='point', linestyle='none', height=3.5, aspect=1.5)\n",
     "sns.stripplot(data=data, x='Country', y='Expectancy', hue='Country', \n",
@@ -150,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +170,7 @@
     }
    ],
    "source": [
+    "# Plot expectancy as a funcion of GDP for each country\n",
     "fig, ax = plt.subplots(figsize=(6,4))\n",
     "sns.scatterplot(data=data, x='Expectancy', y='GDP', hue='Country', ax=ax)\n",
     "plt.legend(bbox_to_anchor=(1, 0.8), frameon=False)\n",
